--- a/src/App.css
+++ b/src/App.css
@@ -12,11 +12,27 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: c;
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
 .App-link {
   color: #09d3ac;
+}
+container {
+  padding: 0px;
+}
+form {
+  max-width: 100%;
+  padding: 0%;
+  text-align: left;
+  
+  box-shadow: 0 0.313rem 3.875rem 0 rgba(0, 0, 0, 0.19);
+  border-radius: 1.25rem;
+  font-size: 1.25rem;
+  font-weight: 500;
+}
+form-control {
+  padding: 0px;
 }
